fix page layout bug

--- a/src/style.css
+++ b/src/style.css
@@ -80,3 +80,8 @@ body {
 ::backdrop {
   background-color: rgba(255, 255, 255, 0);
 }
+
+#root {
+  display: flex;
+  justify-content: center;
+}
